--- a/SubEthaEdit-Mac/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt
@@ -1,3 +1,8 @@
+###################################### NB
+Hat tip to ash
+http://www.actionscripthero.com
+#####################################
+
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
