--- a/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/ASP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -8,3 +8,4 @@ Changes with Version 4.0 (SEE 4.0)
 	*) added ChangeLog
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) removed StyleIDTransition.plist
