--- a/SubEthaEdit-Mac/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
+++ b/SubEthaEdit-Mac/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes with Version 4.0 (SEE 4.0)
 	*) SYNTAX: updated for syntax scopes
 	*) SYNTAX: markup cleanup
+	*) removed StyleIDTransition.plist
 
 Changes with Version 3.5  (SEE 3.5.1)
 	 *) fixed issues with wonky coloring of class member variables
